js/js.translator/testData/incremental/invalidation/typeScriptExportsPerFile/lib2/l2.3.d.ts
type Nullable<T> = T | null | undefined
export declare class MyClass {
    constructor(stepId: number);
    get stepId(): number;
    qux(): number;
}